# api/api.yml
@@ -479,6 +479,26 @@ paths:
               schema:
                 $ref: "./schemas/error.yml#/components/schemas/Error"
 
+  /accounts/{accountId}/token:
+    get:
+      summary: Gets a token for an account
+      operationId: getAccountToken
+      parameters:
+        - $ref: "#/components/parameters/accountId"
+      responses:
+        200:
+          description: Successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/JWTToken"
+        default:
+          description: An error occurred
+          content:
+            application/json:
+              schema:
+                $ref: "./schemas/error.yml#/components/schemas/Error"
+
   /teams:
     get:
       summary: List all teams
